--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <link rel="stylesheet" href="./css/styles.css">
-    <meta charset="utf-8">
-    <title>BlogPost</title>
-  </head>
-  <body>
-    <h1>Este es un Blogpost</h1>
-    <p>No encontraras uno Mejor</p>
-    <a>Terminos y Condiciones</a>
-  </body>
+<html>
+    <head>
+        <title>El titulo del post</title>
+        <link rel="stylesheet" href="./css/styles.css" />
+    </head>
+    <body>
+        <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
+            <div id="post">
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+            </div>
+        </div>
+      </body>
 </html>
