Primera version de la cabezera, sin logo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                <img src="" alt="">
+                <ul>
+                  <li>
+                    <a href="#">Nosotros</a>
+                  </li>
+                  <li>
+                    <a href="#">Hitoria</a>
+                  </li>
+                  <li>
+                    <a href="#">Otros Blogpost</a>
+                  </li>
+                </ul>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
