--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas.
+                Este parrafo fue escrito con mucho amor para todos ustedes. Viva Ambato</p>
             </div>
         </div>
       </body>
