--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Este es el mejos Blogpost</title>
+        <title>Este es el mejor Blogpost</title>
         <link rel="stylesheet" href="./css/styles.css" />
     </head>
     <body>
