--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             </div>
             <footer class="footer">
               <div class="links">
-                <p class="link"><a href="#" class="anchor">Terminos y Condiciones</a></p>
-                <p class="link"><a href="#" class="anchor">Sobre Nosotros</a></p>
-                <p class="link"><a href="#" class="anchor">Contactanos </a> </p>
-                <p class="link"><a href="#" class="anchor">Buscas Empleo</a> </p>
+                <p class="link"><a href="#" class="anchor">Terminos y Condiciones.</a></p>
+                <p class="link"><a href="#" class="anchor">Sobre Nosotros.</a></p>
+                <p class="link"><a href="#" class="anchor">Contactanos.</a> </p>
+                <p class="link"><a href="#" class="anchor">Buscas Empleo.</a> </p>
               </div>
               </footer>
         </div>
